# ws_chat

./: Cargo.toml  Makefile  README.md
backend/: Cargo.toml
backend/src/: chat_room.rs  handlers.rs  main.rs  metrics.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: input.rs  main.rs  message_list.rs  users_list.rs
