[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
rocket_ws = "0.1"
# prometheus = "0.13"
# lazy_static = "1.4"
rocket_prometheus = "0.10"
once_cell = "1.19"

common ={ path = "../common" }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
